# best_movies

./: .env-example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
docker-scripts/: commands.sh
src/apps/bm_api/: admin.py  apps.py  models.py  serializer.py  services.py  urls.py  views.py
src/apps/bm_api/migrations/: 0001_initial.py  0002_actororactress_director_movie_delete_directorname_and_more.py  0003_remove_movie_average_rating_between_0_00_and_5_00_and_more.py
src/bm_api/: apps.py
src/project/: settings.py  urls.py
src/tmdb_api/: apps.py
